<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_mobile_number"> Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SignUp</string>
    <string name="preference_file_name">Restaurant Preferences</string>
    <string name="email">\tEmail Address</string>
    <string name="address">\tAddress</string>
    <string name="mobile_number">\tMobile Number</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">\tName</string>
    <string name="choose">Choose from Menu listed below</string>
    <string name="abc">Q. Do I need to pay extra to order using this site/app? \n Ans. Not as long as the restaurant you order from is not charging any convenience fees you don\'t have to pay extra. Restaurants can choose to charge conveniece. Our goal is to provide best online ordering and deliver system to restaurants and delivery services which offer the best possible experience for customers.</string>
    <string name="bcd">\n\nQ. Do restaurants ever receive my Credit Card / PayPal information?\n Ans. Our systems are secure. We use https to encrypt and pass the information directly to Clover/Square/Stripe or Paypal. In some cases, we communicate to the restaurant the name on the card as well as the last 4 digits to aid in fraud prevention so that they can verify information.</string>
    <string name="cde">\n\nQ. Can I cancel an order after placing it?\n Ans. Please check with the restaurant. You cannot cancel an order for which the restaurant may have started processing. In case the restaurant has not started processing the order, you can call the restaurant phone # or send an email (which is provided in your order details).</string>
    <string name="thank_you_your_order_has_been_placed">Thank You! Your Order has been placed!!</string>
    <string name="pre">My Previous Orders</string>
</resources>
