<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".activities.LoginActivity2">


        <ImageView
            android:id="@+id/imgImage"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/capture"
            android:layout_marginTop="40dp"
            android:layout_gravity="center" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="15dp"
            android:hint="@string/enter_mobile_number"
            android:drawableLeft="@drawable/ic_smartphone_black_24dp"
            android:inputType="phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/enter_password"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:inputType="textPassword"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#db5a6b"
            android:layout_marginVertical="32dp"
            android:text="@string/login"
            android:textStyle="italic"
            android:layout_gravity="center"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtFp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/forgot_password"
            />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account_signup"
            android:textColor="#0009ff"
            android:layout_marginTop="240dp"
            android:textSize="13sp" />


    </LinearLayout>
