<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FaqFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtFaq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Frequently Asked Questions"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abc"
        android:layout_below="@+id/txtFaq"
               android:textSize="20sp"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bcd"
        android:textSize="20sp"
        android:layout_below="@+id/txt1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cde"
        android:textSize="20sp"
        android:layout_below="@+id/txt2"
        />

</RelativeLayout>
</ScrollView>