<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:hint= "@string/name"
        android:textColorHint="#cdcdc1"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_assignment_ind_black_24dp"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColorHint="#cdcdc1"
        android:textColor="#000000"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMobile2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginStart="20dp"
        android:hint="@string/mobile_number"
        android:textColorHint="#cdcdc1"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_smartphone_black_24dp"
        android:inputType="phone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginStart="20dp"
        android:hint="\tAddress"
        android:textColorHint="#cdcdc1"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_home_black_24dp"
        android:inputType="textPostalAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginStart="20dp"
        android:hint="\tPassword"
        android:textColorHint="#cdcdc1"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:inputType="textPassword" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPasswordC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginStart="20dp"
        android:hint="\tConfirm Password"
        android:textColorHint="#cdcdc1"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:inputType="textPassword" />

<Button
    android:id="@+id/btnSubmit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="51dp"
    android:text="SUBMIT"
    android:textColorHighlight="#ffffff"/>

</LinearLayout>